test_regress/t/t_param_implicit_local_bad.out
%Error-PINNOTFOUND: t/t_param_implicit_local_bad.v:9:21: Parameter pin not found: '__paramNumber3'
    9 |     mod1  # ( 3, 4, 5 )   i_mod1 ();
      |                     ^
                    ... For error description see https://verilator.org/warn/PINNOTFOUND?v=latest
%Error-PINNOTFOUND: t/t_param_implicit_local_bad.v:11:15: Parameter pin not found: '__paramNumber1'
   11 |     mod3  # ( 7, 24, 25 ) i_mod3 ();
      |               ^
%Error-PINNOTFOUND: t/t_param_implicit_local_bad.v:11:18: Parameter pin not found: '__paramNumber2'
   11 |     mod3  # ( 7, 24, 25 ) i_mod3 ();
      |                  ^~
%Error-PINNOTFOUND: t/t_param_implicit_local_bad.v:11:22: Parameter pin not found: '__paramNumber3'
   11 |     mod3  # ( 7, 24, 25 ) i_mod3 ();
      |                      ^~
%Error-PINNOTFOUND: t/t_param_implicit_local_bad.v:12:22: Parameter pin not found: '__paramNumber3'
   12 |     intf1 # ( 8, 15, 17 ) i_intf1 ();
      |                      ^~
%Error: Exiting due to
